NLP TP's/texts/robotics/robotics.stackexchange_0000081834.txt
Q:

error: no match for 'operator='

Hey,
I get this error when building the package:
/home/ken/cws/src/mathematics/src/evenNumberGenerator.cpp:24: error: no match for 'operator=' (operand types are 'mathematics::TwoData_<std::allocator<void> >::_data2_type {aka std_msgs::Int8_<std::allocator<void> >}' and 'int')
             number.data2 = i*2;
                          ^

Basically, I am working on this issue, finally I think I figured it out the correct way of using custom messages in my package but I guess I made some mistake in my code.
msg file:
ken@ken-Satellite-L500D:~$ cat cws/src/mathematics/msg/TwoData.msg
std_msgs/Int8 data1
std_msgs/Int8 data2

Does anyone have an idea?
Thanks!

Originally posted by Kenn on ROS Answers with karma: 5 on 2017-07-18
Post score: 0

A:

Did you try with
number.data2.data = i*2;

?

Originally posted by Chaos with karma: 396 on 2017-07-18
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by Kenn on 2017-07-18:
Thank you, that was it! But why? I don't remember such a syntax was mentioned anywhere in tutorials.
Comment by Chaos on 2017-07-18:
I think it is because std_msgs/Int8 is a structured data (a class I think). If you try with just Int8 you can get direct access to the data. Check this.
Comment by Kenn on 2017-07-18:
I just attempted compiling the package with Int8 data1 (data2), without std_msgs/ in my msg folder, it gives some dependency errors. I believe in some of the answers here I saw the correct use of message declaration was like this "package/type name".
Comment by gvdhoorn on 2017-07-18:
Note: the primitive is int8, the message name is Int8 (with a capital i). The first is a built-in, the second is a message in std_msgs. The latter requires you add the std_msgs/ prefix.

